--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-  "name"          : "webmodules/underscore",
-  "description"   : "JavaScript's functional programming helper library.",
-  "keywords"      : ["util", "functional", "server", "client", "browser"],
-  "repo"          : "jashkenas/underscore",
-  "main"          : "underscore.js",
-  "scripts"       : ["underscore.js"],
-  "version"       : "1.8.3",
-  "license"       : "MIT"
+	"name": "webmodules/underscore",
+	"type": "library",
+	"description": "JavaScript's functional programming helper library.",
+	"keywords": ["util", "functional", "server", "client", "browser"],
+	"repo": "jashkenas/underscore",
+	"main": "underscore.js",
+	"scripts": ["underscore.js"],
+	"version": "1.8.3",
+	"license": "MIT"
 }
